--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,18 @@ button {
     }
 }
 
+@media screen and (max-width: 600px) {
+    #image-container img {
+        border-radius: 8px;
+        max-width: 40ch;
+        transform: rotate(0deg);
+    }
+
+    #text-container h1 {
+        margin-top: 40px;
+        font-size: 24px;
+        width: 40ch;
+        margin-bottom: 32px;
+    }
+  }
+  
