--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f5f5f3;
+    background-color: #F6F4ED;
 }
 
 main {
@@ -14,7 +14,7 @@ main {
     font-weight: 400;
     font-style: normal;
     font-size: 32px;
-    color: #3a7858;
+    color: #405647;
     width: 60ch;
     margin-bottom: 48px;
     text-align: center;
@@ -53,8 +53,8 @@ button {
 
     #text-container h1 {
         margin-top: 40px;
-        font-size: 16px;
-        font-weight: 600;
+        font-size: 20px;
+        font-weight: 500;
         width: 40ch;
         margin-bottom: 40px;
     }
